examples/failing/NewtypeMultiCtor.purs
module Main where

newtype Thing = Thing String | Other
